Update fixed nav bar spacing

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ nav {
 }
 
 section {
+  padding-top: 80px;
   margin: 0 auto;
   width: 60%;
 }
